--- a/layouts/partials/navbar/navbar-home.html
+++ b/layouts/partials/navbar/navbar-home.html
@@ -1,8 +1,7 @@
-<div class="row">
+<!-- <div class="row">
     <nav class="navbar navbar-default navbar-fixed-top barra navbar-shrink">
         <div class="container">
             {{ partial "navbar/brand.html" . }}
-            {{ partial "navbar/menu.html" . }}
         </div>
     </nav>
-</div>
+</div> -->
