--- a/layouts/partials/sidebar/sidebar.html
+++ b/layouts/partials/sidebar/sidebar.html
@@ -5,7 +5,7 @@
                 <h1>{{ $.Site.Params.author }}</h1>
                 <h2>{{ $.Site.Params.domain }}</h2>
             </div>
-            <img src="img/profile2.jpg" class="responsive-img" alt="Foto de perfil">
+            <img src="/img/profile2.jpg" class="responsive-img" alt="Foto de perfil">
         </div>
     </header>
     
@@ -23,7 +23,7 @@
             @include('partials.personalSkills')
 
             <p class="text-center">
-                <img src="img/logos/aws-solutions-architect.png" class="responsive-img" alt="Foto de perfil">
+                <img src="/img/logos/aws-solutions-architect.png" class="responsive-img" alt="Foto de perfil">
             </p>
         </div>
     </div>
